methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:1: error: Missing closing brace `}' assumed here
def Motif(c:Color) {
^FlowerCase:1: error: expected class or object definition
def Motif(c:Color) {
^FlowerCase:16: error: expected class or object definition
def growFlowers() {
^FlowerCase:49: error: expected class or object definition
def flowers() {
^FlowerCase:69: error: expected class or object definition
def brosse(c:Color) {
^